运行scrapyd服务及发布爬虫到scrapyd中

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = scrapyPython3.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:tangxl]
+url = http://localhost:6800/
 project = scrapyPython3
