部分遗留内容更新

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -9,3 +9,9 @@ default = scrapyPython3.settings
 [deploy:tangxl]
 url = http://localhost:6800/
 project = scrapyPython3
+settings = scrapyPython3.settings
+
+[deploy:tangxl2]
+url = http://localhost:6800/
+project = testp
+settings = testp.settings
